--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     <i class="icon-quote"></i>
                   </div>
                   <div class="testimonial-image">
-                    <img src="/images/kabina.jpg" alt="Kabina Thapa" />
+                    <img src="/images/testimonials4.jpg" alt="Abhishek Paudel" />
                   </div>
                   <div class="testimonial-rating">
                     <i class="icon-star"></i>
@@ -561,7 +561,7 @@
                     focus on overall wellness, not just treating symptoms."
                   </p>
                   <div class="testimonial-author">
-                    <h4 class="testimonial-name">Kabina Thapa </h4>
+                    <h4 class="testimonial-name">Abhishek Paudel </h4>
                     <p class="testimonial-position">Patient</p>
                   </div>
                 </div>
@@ -572,7 +572,7 @@
                     <i class="icon-quote"></i>
                   </div>
                   <div class="testimonial-image">
-                    <img src="/images/ai.jpg" alt="John Doe" />
+                    <img src="/images/testimonials3.jpg" alt="Sangam Poudel" />
                   </div>
                   <div class="testimonial-rating">
                     <i class="icon-star"></i>
@@ -587,7 +587,7 @@
                     relief from my chronic joint pain. Highly recommended!"
                   </p>
                   <div class="testimonial-author">
-                    <h4 class="testimonial-name">John Doe</h4>
+                    <h4 class="testimonial-name">Sangam Poudel</h4>
                     <p class="testimonial-position">Patient</p>
                   </div>
                 </div>
